--- a/css/components/card.css
+++ b/css/components/card.css
@@ -1,25 +1,10 @@
-.card {
-	padding: 50px;
-	display: flex;
- 	align-items: center;
- 	justify-content: space-around;
-}
+.card{
+ display: flex;
+ margin-top: 100px;
+ margin-left: 250px;
+ margin-right: 800px;
+ align-items: center;
+ justify-content: space-around;
+ }
 
-.card-text-left{
-	float: left;
-  width: 400px;
-
-
-}
-
-.card-pictures-right{
-	margin-left: 60%;
-	justify-content: space-between;
-}
-
-
-
-#card-menu-profiles{
-	display: flex;
-
-}
+ 
