--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,33 @@
 @import url("components/container.css");
 @import url("components/avatar.css");
 @import url("components/button.css");
+@import url("components/card.css");
+@import url("components/icon.css");
+@import url("components/topnav.css");
+@import url("components/texte.css");
+
+
 
 body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 18px; 
+	text-align: center;
+	margin: 0px;
 }
 h1, h2, h3 {
 	font-family: 'Oxygen', sans-serif;
 	font-weight: bold;
+	position: center;
 }
 
+h4 {
+	font-family: 'Oxygen', sans-serif;
+	text-align: center;
+	font-size: 23px;
+	font-style: italic;
+	margin-right: 465px;
+}
 a {
 	text-decoration: none;
 }
-
-
-
 
