--- a/css/components/card.css
+++ b/css/components/card.css
@@ -7,4 +7,29 @@
  justify-content: space-around;
  }
 
+.card {
+	padding: 50px;
+	display: flex;
+ 	align-items: center;
+ 	justify-content: space-around;
+}
+
+.card-text-left{
+	float: left;
+  width: 400px;
+
+
+}
+
+.card-pictures-right{
+	margin-left: 60%;
+	justify-content: space-between;
+}
+
+
+
+#card-menu-profiles{
+	display: flex;
+
+}
  
