--- a/css/components/button.css
+++ b/css/components/button.css
@@ -39,3 +39,20 @@
 	padding-left: 7px;
 	padding-right: 7px;
 }
+
+.btn-avatar{
+	position: absolute;
+	bottom: 60px;
+	right: 75px;
+	width: 100px;
+	height: 40px;
+	border-radius: 18px;
+	border-width : thin;
+	background-color: white;
+	font-size: 15px;
+	font-weight: bold;
+}
+
+.btn-avatar:hover {
+	background-color: yellow;
+}
