--- a/css/components/container.css
+++ b/css/components/container.css
@@ -100,6 +100,32 @@ margin-right: 460px;
   
 }
 
+.card {
+	padding: 50px;
+	display: flex;
+ 	align-items: center;
+ 	justify-content: space-around;
+}
+
+.card-text-left{
+	float: left;
+  width: 400px;
+
+
+}
+
+.card-pictures-right{
+	margin-left: 60%;
+	justify-content: space-between;
+}
+
+
+
+#card-menu-profiles{
+	display: flex;
+
+}
+
 
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
