--- a/css/components/button.css
+++ b/css/components/button.css
@@ -56,3 +56,36 @@
 .btn-avatar:hover {
 	background-color: yellow;
 }
+
+.btn-blue {
+	background-color: black; 
+	padding: 20px 20px;
+	border-radius: 10px; 
+	color: white;
+	font-weight: bold;
+	font-family: 'Poppins', sans-serif;
+	margin-top: : 40px;
+	text-align: center;
+}
+
+.btn-blue:hover {
+	background-color: #ffff65;
+	color: black;
+}
+
+.btn-grey {
+	position: absolute;
+	background-color: black; 
+	padding: 20px 20px;
+	border-radius: 10px; 
+	color: white;
+	font-weight: bold;
+	font-family: 'Poppins', sans-serif;
+	margin-top: : 40px;
+	text-align: center;
+}
+
+.btn-grey:hover {
+	background-color: #ffff65;
+	color: black;
+}
