--- a/css/components/card.css
+++ b/css/components/card.css
@@ -33,3 +33,47 @@
 
 }
  
+.cards {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.card-logo { 
+	padding-left: 20px; 
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border-radius: 6px; 
+	margin: 10px;
+	flex-basis: 250px;
+	flex-grow: 1; 
+}
+
+.card h3 {
+	flex-grow: 1;
+	padding-left: 20px;
+	font-size:18px;
+}
+
+.avatar {
+	width: 60px;
+	height: 60px;
+	border-radius: 50%; 
+}
+
+.cards-events {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.card-events {
+	padding-left: 20px; 
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border-radius: 6px;
+	margin-left: 10px;
+	margin: 10px;
+	flex-basis: 250px; 
+	flex-grow: 1; 
+}
