--- a/css/components/container.css
+++ b/css/components/container.css
@@ -107,6 +107,43 @@ margin-right: 460px;
 
 }
 
+.container-events {
+  width: 700px; 
+  margin: 0 auto; 
+}
+
+.container-events img {
+  width: 400px;
+  border-radius: 10px; 
+  margin: 20px;
+}
+
+.container-events h2 {
+  flex-grow: 1;
+  padding-left: 20px;
+  font-size:36px;
+  text-align: center;
+}
+
+#container-menu-events {
+  position: center;
+  width: 700px; 
+  margin: 0 auto; 
+}
+
+.container-menu-events h2 {
+  flex-grow: 1;
+  padding-left: 20px;
+  font-size:36px;
+  text-align: center;
+}
+
+.container-menu-events img {
+  width: 400px;
+  border-radius: 10px; 
+  margin: 10px; 
+}
+
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
