--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import url("components/card.css");
 @import url("components/icon.css");
 @import url("components/texte.css");
+@import url("components/logo.css");
 @import url("components/containert.css");
 @import url("components/logo-t.css");
 @import url("components/button-home.css");
