--- a/css/components/card.css
+++ b/css/components/card.css
@@ -4,7 +4,7 @@
  margin-left: 250px;
  margin-right: 800px;
  align-items: center;
- justify-content: space-around;
+ justify-content: space-between;
  }
 
 .card {
