--- a/css/components/button.css
+++ b/css/components/button.css
@@ -69,7 +69,7 @@
 }
 
 .btn-blue:hover {
-	background-color: #ffff65;
+	background-color: #f8f859;
 	color: black;
 }
 
@@ -86,6 +86,6 @@
 }
 
 .btn-grey:hover {
-	background-color: #ffff65;
+	background-color: #f8f859;
 	color: black;
 }
