--- a/css/components/container.css
+++ b/css/components/container.css
@@ -4,8 +4,7 @@
 }
 
 
-#container-menu-profiles{
-  position: center;
+.container-menu-profiles {
   width: 200px;
   padding: 240px;
   padding-top: 100px;
