--- a/css/components/container.css
+++ b/css/components/container.css
@@ -144,6 +144,10 @@ margin-right: 460px;
   margin: 10px; 
 }
 
+#video {
+ margin-top: 20px;
+}
+
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
