--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 @import url("components/topnav.css");
 @import url("components/box.css");
 @import url("components/sous-titre.css");
+@import url("components/gallery.css");
 
 
 
