--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,20 @@ a {
 	margin: 50px 0px;
 	text-align: center;
 }
+
+.list-inline{
+	list-style: none;
+	padding-left: 0px;	
+}
+.list-inline li{
+	display: inline;
+	 padding:10px;	  
+}
+.list-inline i{
+	 font-size: 50px;
+	 color: #C5E3F7; 
+}
+.list-inline i:hover{
+	font-size: 50px;
+	color: #F8C346;
+}
